--- a/src/mobilecomponents/pokidex/Pokidex.css
+++ b/src/mobilecomponents/pokidex/Pokidex.css
@@ -10,6 +10,9 @@
   justify-content: space-between;
   width: 33%;
 }
+.lighting-container > div {
+  flex-shrink: 0;
+}
 
 .main-lighting {
   height: 55px;
