--- a/src/mobilecomponents/searchbar/SearchBar.css
+++ b/src/mobilecomponents/searchbar/SearchBar.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 .search-box {
   color: white;
+  font-family: "Press Start 2P", cursive !important;
 }
 
 .search-button {
   color: white;
+  font-family: "Press Start 2P", cursive !important;
 }
